# development-toolbox-smarttree

./: .gitignore  .treeignore  .treeignore.example  DOCUMENTATION.md  LICENSE  MANIFEST.in  Makefile  PUBLISHING.md  README.md  generate_completions.py  pyproject.toml  setup.sh  smarttree.1  smarttree.py  test_treeignore.py
completions/: _smarttree  smarttree.bash  smarttree.fish
docs/commit-logs/feat/update-githooks-installation-20250709-180643/: 74961106.md  README.md
docs/commit-logs/feature/treeignore-pattern-matching/: 4c7db28f.md  58d079ce.md  README.md  git_timeline_report.md
docs/commit-logs/main/: 0621d7e9.md  10d8f8ef.md  29c21ffb.md  4af2cecc.md  9d25ce9a.md  README.md  d11e8065.md  f0fbbed8.md  git_timeline_report.md
docs/githooks/: .githooks-version.json
scripts/post-commit/: generate_git_timeline.py  githooks_utils.py  update-readme.sh
