[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "smarttree"
version = "0.2.0"
description = "Modern cross-platform directory tree viewer with emoji support, Markdown export, .treeignore filtering, and colorized output"
readme = "README.md"
authors = [
    {name = "Johan Sörell", email = "your-email@example.com"}
]
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Documentation",
    "Topic :: System :: Filesystems",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]
keywords = [
    "tree", 
    "directory", 
    "folder", 
    "structure", 
    "visualization",
    "cross-platform",
    "emoji", 
    "cli", 
    "command-line",
    "devops",
    "automation",
    "documentation",
    "markdown",
    "treeignore",
    "filesystem",
    "unix-tree",
    "directory-tree",
    "file-tree"
]
requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/development-toolbox/development-toolbox-smarttree"
Documentation = "https://github.com/development-toolbox/development-toolbox-smarttree#readme"
Repository = "https://github.com/development-toolbox/development-toolbox-smarttree"
Issues = "https://github.com/development-toolbox/development-toolbox-smarttree/issues"
Blog = "https://automationblueprint.site"

[project.scripts]
smarttree = "smarttree:main"

[tool.setuptools]
py-modules = ["smarttree"]

[tool.setuptools.packages.find]
where = ["."]
include = ["smarttree*"]

[tool.setuptools.data-files]
"share/man/man1" = ["smarttree.1.gz"]
"share/bash-completion/completions" = ["completions/smarttree.bash"]
"share/zsh/site-functions" = ["completions/_smarttree"]
"share/fish/vendor_completions.d" = ["completions/smarttree.fish"]